# clickqt

./: .readthedocs.yml  AGENTS.md  CONTRIBUTING.md  COPYING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
clickqt/: __main__.py  basedint.py
clickqt/core/: commandexecutor.py  control.py  core.py  defaults.py  error.py  focusoutvalidator.py
clickqt/widgets/: basewidget.py  checkbox.py  combobox.py  confirmationwidget.py  customwidget.py  datetimeedit.py  filepathfield.py  messagebox.py  nvaluewidget.py  optiongrouptitlewidget.py  styles.py  textfield.py  tuplewidget.py
doc/: conf.py
example/: README.md  pyproject.toml
example/example/: __main__.py
example/example/apps/: __init__.py  full_showcase.py  hello_world.py  realistic_app.py
tests/: conftest.py  test_clickqt_external.py  test_command_import.py  test_command_string.py  test_default.py  test_defaults_normalization.py  test_disable.py  test_envvar.py  test_execution.py  test_focusoutvalidation.py  test_gui.py  test_option_group_widget.py  test_types.py  testutils.py
