# This section describes the requirements of the build/installation
# process itself. Being able to do this was the original reason to
# introduce pyproject.toml
[build-system]
requires = [
    "setuptools >=51",
    "setuptools_scm >=6",
]
build-backend = "setuptools.build_meta"

# This section provides general project metadata that is used across
# a variety of build tools. Notably, the version specified here is the
# single source of truth for clickqt's version
[project]
name = "clickqt"
description = "Turn click CLI's into QT applications"
readme = "README.md"
maintainers = [
    { name = "Dominic Kempf", email = "ssc@iwr.uni-heidelberg.de" },
]
dynamic = ["version"]
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "click>=8,<9",
    "click_option_group",
    "PySide6",
    "qt-collapsible-section-pyside6",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-xvfb",
    "pytest-cov",
    "pytest-qt",
]
docs = [
    "sphinx",
    "sphinx_mdinclude",
    "sphinx_rtd_theme",
    "enum-tools[sphinx]",
    "sphinx_qt_documentation",
]

# The external "standalone" version
[project.scripts]
clickqtfy = "clickqt.__main__:clickqtfy"

# The following section contains setuptools-specific configuration
# options. For a full reference of available options, check the overview
# at https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
packages = [
    "clickqt",
]

# Configure setuptools_scm, which extracts the version number from
# the version control system. For more information see its documentation:
# https://github.com/pypa/setuptools_scm
[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
write_to = "clickqt/_version.py"

# The following is the configuration for the pytest test suite
[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "tests/*",
    "__init__.py",
    "_version.py",
    "example/*",
]

[tool.coverage.report]
exclude_also = [
    "def __call__", # Control.__call__ and GUI.__call__ cannot be automated
    "raise NotImplementedError", # Error.message: Message for an specific error type not implemented
]
